tests/NormalTests/paczka1/fuzzy1/45160316.err
Error in line 2: RI82g8PV A257 24,2
Error in line 12: slDKbG7ipl A129 87,0
Error in line 16: uzce7h S537 78,6
Error in line 19: pakACk A129 91,0
Error in line 37: RI82g8PV A129 65,7
